--- a/styles.scss
+++ b/styles.scss
@@ -33,9 +33,11 @@ p{
   background-position-y: 116%;
   background-position-x: 113%;
 
+  width: 38rem;
   box-shadow: 0px 4px 40px rgba(2, 7, 12, 0.5);
   padding: 1.5%;
   margin-top: 1rem;
+  align-self: center;
 
   border-style: hidden;
   border-radius: 30px;
@@ -45,7 +47,8 @@ p{
 
 .card-img-top{
 
-  width: 34.5rem;
+  width: 34rem;
+  align-self: center;
 }
 
 .btn-exit{
@@ -62,6 +65,7 @@ p{
 }
 
 .exit{
+
   text-align: center;
   margin-top: 5%;
   margin-bottom: -1rem;
