--- a/styles.scss
+++ b/styles.scss
@@ -50,6 +50,11 @@ p{
   width: 56rem;
 }
 
+.container-congrats{
+  
+  width: 76rem;
+}
+
 .card-img-top{
 
   width: 34rem;
@@ -59,6 +64,11 @@ p{
 .card-img-result{
 
   width: 40rem;
+}
+
+.card-img-congrats{
+
+  width: 58rem;
 }
 
 .btn-exit{
@@ -101,6 +111,14 @@ p{
 .btn-group-next{
 
   margin-top: 1rem;
+  margin-bottom: -1rem;
+  text-align: center;
+}
+
+.btn-group-congrats{
+
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   text-align: center;
 }
 
@@ -133,6 +151,36 @@ p{
   color: #F6F7F8;
 
   margin-bottom: 5%;
+}
+
+.result-title{
+
+  background-color: #0E1A33;  
+  background-image: url("imgs/background2.png");
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-size: 40%;
+
+  color: #F6F7F8;
+  //font-family: 'Lato', sans-serif;
+
+  font-weight: bold;
+  text-align: center;
+  font-size: 430%;
+  
+  margin: 0;
+  margin-bottom: -2rem;
+}
+
+.congrats-title{
+
+  font-size: 450%;
+}
+
+.btn-congrats{
+
+  font-size: 120%;
+  padding: 0.5rem;
 }
 
 .btn-info{
