--- a/styles.scss
+++ b/styles.scss
@@ -1,21 +1,17 @@
-body{
-
-  background-image: linear-gradient(180deg, #0E1A33 13%, #050A13 80%);
+body {
+  background-image: linear-gradient(180deg, #0e1a33 13%, #050a13 80%);
   text-align: left;
   font-size: 110%;
 }
 
-p{
-  
-  font-family: 'Lato', sans-serif;
+p {
+  font-family: "Lato", sans-serif;
   color: #8dc63f;
-  
 }
 
-.btn{
-
-  color: #F6F7F8;
-  font-family: 'Dosis', sans-serif;
+.btn {
+  color: #f6f7f8;
+  font-family: "Dosis", sans-serif;
   font-size: 102%;
   font-weight: bold;
   text-transform: uppercase;
@@ -24,9 +20,8 @@ p{
   border-radius: 40px;
 }
 
-.container{
-
-  background-color: #0E1A33;  
+.container {
+  background-color: #0e1a33;
   background-image: url("imgs/background.png");
   background-repeat: no-repeat;
   background-size: 50%;
@@ -42,88 +37,74 @@ p{
   border-style: hidden;
   border-radius: 30px;
   border-width: 1%;
-  border-color:#0E1A33;
+  border-color: #0e1a33;
 }
 
-.container-result{
-
+.container-result {
   width: 56rem;
 }
 
-.container-congrats{
-  
+.container-congrats {
   width: 76rem;
 }
 
-.card-img-top{
-
+.card-img-top {
   width: 34rem;
   align-self: center;
 }
 
-.card-img-result{
-
+.card-img-result {
   width: 40rem;
 }
 
-.card-img-congrats{
-
+.card-img-congrats {
   width: 58rem;
 }
 
-.btn-exit{
-
-  background-color: #EF4123;
+.btn-exit {
+  background-color: #ef4123;
   width: 17%;
 }
 
-.btn-exit:hover{
-
+.btn-exit:hover {
   background-color: #cc2b0f;
 }
 
-.btn-continue{
-
+.btn-continue {
   background-color: #8dc63f;
   text-align: center;
   width: 22%;
 }
 
-.btn-continue:hover{
-
-  color: #F6F7F8;
+.btn-continue:hover {
+  color: #f6f7f8;
   background-color: #71a130;
 }
 
-.exit{
-
+.exit {
   text-align: center;
   margin-top: 5%;
   margin-bottom: -1rem;
 }
 
-.space{
-
+.space {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
 }
 
-.btn-group-next{
-
+.btn-group-next {
   margin-top: 1rem;
   margin-bottom: -1rem;
   text-align: center;
 }
 
-.btn-group-congrats{
-
+.btn-group-congrats {
   margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center;
 }
 
-.card-img-top{
-
+.card-img-top {
   margin-top: 3%;
 
   border-style: hidden;
@@ -131,7 +112,6 @@ p{
   border-width: 1%;
 }
 .style-line {
-
   width: 90px;
   height: 4px;
 
@@ -140,52 +120,47 @@ p{
   padding-left: 0;
 
   border-radius: 20px;
-  background-color: #EF4123;
+  background-color: #ef4123;
 }
 
-.card-title{
-
+.card-title {
   text-transform: uppercase;
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-weight: bold;
-  color: #F6F7F8;
+  color: #f6f7f8;
 
   margin-bottom: 5%;
 }
 
-.result-title{
-
-  background-color: #0E1A33;  
+.result-title {
+  background-color: #0e1a33;
   background-image: url("imgs/background2.png");
   background-repeat: no-repeat;
   background-position-x: center;
   background-size: 40%;
 
-  color: #F6F7F8;
+  color: #f6f7f8;
   //font-family: 'Lato', sans-serif;
 
   font-weight: bold;
   text-align: center;
   font-size: 430%;
-  
+
   margin: 0;
   margin-bottom: -2rem;
 }
 
-.congrats-title{
-
+.congrats-title {
   font-size: 450%;
 }
 
-.btn-congrats{
-
+.btn-congrats {
   font-size: 120%;
   padding: 0.5rem;
 }
 
-.btn-info{
-
-  background-color: #067A99;
+.btn-info {
+  background-color: #067a99;
 
   padding-top: 2%;
   padding-bottom: 2%;
@@ -193,7 +168,47 @@ p{
   width: 60%;
 }
 
-.btn-info:hover{
-
+.btn-info:hover {
   background-color: #05627a;
+}
+
+.certif_title {
+  text-align: center;
+  font-family: dosis ,sans-serif;
+  font-size: 100px;
+  color: #f6f7f8;
+  letter-spacing: 25px;
+  font-weight: bold;
+}
+
+.certif_description {
+  text-align: center;
+  font-family: dosis ,sans-serif;
+  font-size: 60px;
+  color: #f6f7f8;
+  letter-spacing: 5px;
+}
+
+
+.certif_description_autorized {
+  text-align: center;
+  font-family: dosis ,sans-serif;
+  font-size: 60px;
+  color: #0ab118;
+}
+
+.imput_name {
+  width: 800px;
+  height: 100px;
+  font-size: 80px;
+  opacity: 1;
+  justify-content: center;
+  border-radius: 10px;
+  background-color: transparent;
+  border: none;
+  font-family: dosis ,sans-serif;
+  color: #ffffff;
+  text-align: center;
+ 
+  
 }
