--- a/styles.scss
+++ b/styles.scss
@@ -168,6 +168,12 @@ p {
   width: 60%;
 }
 
+.btn-cartoons {
+  width: 100px;
+  height: 30px;
+  
+}
+
 .btn-info:hover {
   background-color: #05627a;
 }
@@ -212,3 +218,18 @@ p {
  
   
 }
+.container2 {
+  width: 800px;
+  height: 500px;
+  background: #0c172e;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  }
+  .box {
+  width: 300px;
+  height: 300px;
+  background:transparent;
+  }
