--- a/styles.scss
+++ b/styles.scss
@@ -233,3 +233,19 @@ p {
   height: 300px;
   background:transparent;
   }
+
+
+  .card-title2 {
+    text-transform: uppercase;
+    font-family: "Dosis", sans-serif;
+    font-weight: bold;
+    color: #021c36;
+    font-size: 100px;
+  
+    margin-bottom: 5%;
+  }
+
+
+  .text_card {
+    font-size: 36px;
+  }
